--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jotai": "^2.12.1",
     "jsdom": "^26.0.0",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
